tested firebase connection (only for dev)